SERVER-17027 Properly clean up WriteBatchExecutor::ExecInsertsState on WriteConflictException.

(cherry picked from commit 2cc831c713e0f68a41dbf2a9024e0de948b37a6f)